--- a/Basketball Reference Stat Scraper/requirements.txt
+++ b/Basketball Reference Stat Scraper/requirements.txt
@@ -5,9 +5,10 @@ chardet==4.0.0
 idna==2.10
 numpy==1.20.3
 pandas==1.2.4
-python-dateutil==2.8.1
+python-dateutil==2.8.2
 pytz==2021.1
-requests==2.25.1
+requests==2.26.0
+selenium==3.141.0
 six==1.16.0
 soupsieve==2.2.1
 urllib3==1.26.6
