Fixed traded player 82+ games played/started issue.
The issue was with the stat scraper doubling the number of games a player played by using their total season stats combined with their stats for each team.

--- a/.gitignore
+++ b/.gitignore
@@ -131,11 +131,12 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-# Project
-/Project/
 
-# Private Datasets
+
+# Private Datasets, notebooks, and subsets
+/Project/
 complete_players_with_award_voting.csv
 players_with_award_voting.csv
 Combining Data/Combining Player Data and Award Voters/Filling in zeros.ipynb
 Combining Data/Combining Player Data and Award Voters/Combining Player Data and Award Voting.ipynb
+/For Arteta/
